# limix_cl

./: MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py
limix_cl/: __init__.py  limix_lmm.py  utils.py
limix_cl/tests/: test_limix_lmm.py  test_utils.py
limix_cl/tests/data/: cov_dat.csv  sample_subset.txt  x_dat.csv  y_dat.csv
